Testing with img tag for svg

--- a/components/posts/hyper-3.mdx
+++ b/components/posts/hyper-3.mdx
@@ -1,5 +1,4 @@
 import DownloadButton from '../DownloadButton.js'
-import BatchingImage from '../../static/batching.svg'
 
 # Hyper 3
 
@@ -88,7 +87,8 @@ from the main process.
 
 In these profiles, it's easy to see the difference between v2 and v3.
 
-<div> <BatchingImage /> <style> {` div { margin-bottom: 10px; } `} </style>
+<div>
+    <img src="../../static/batching.svg"/>
 </div>
 
 The pink segments represents the time spent processing IPC, instead of parsing
