--- a/components/posts/hyper-3.mdx
+++ b/components/posts/hyper-3.mdx
@@ -1,10 +1,15 @@
 import DownloadButton from '../DownloadButton.js'
 
-# Hyper 3
+<div style={{ padding: '100px 0px 50px 0' }}>
+  <h1> Hyper 3 </h1>
+</div>
 
 **Hyper 3 is finally out!** and the main theme for this release is
 **performance**. To try it out, download it below. Read on to learn what's in
 this release and how it was developed.
+
+<br/>
+<br/>
 
 <div>
   <DownloadButton />
@@ -18,14 +23,15 @@ this release and how it was developed.
     </style>
 </div>
 
+<br/>
+<br/>
+
 We've included a bunch of big and small improvements to make Hyper 3 very fast.
 For all of us that spend a significant amount of time on the command line, this
 release is a game changer.
 
-<div style={{ display: 'flex', justifyContent: 'space-around', margin: '15px 0px 0px 0px' }}>
-    <div>Hyper v2</div>
-    <div>Hyper v3</div>
-</div>
+<br/>
+<br/>
 
 <video
     id="vid"
@@ -36,16 +42,28 @@ release is a game changer.
     muted
     />
 
+<br/>
+
+<div style={{ display: 'flex', justifyContent: 'space-around', margin: '15px 0px 0px 0px' }}>
+    <div>Hyper v2</div>
+    <div>Hyper v3</div>
+</div>
+<br/>
+<br/>
+
 ## Getting There
 
 An interesting thing about this release is that it took a relatively short time
 from "let's make it faster" to "Holy shell! that's pretty fast!". The most
 important tool we used to keep this process efficient was the DevTools profiler,
-perks of building on a web platform, tools are really good. 
+perks of building on a web platform, tools are really good.
 
 We continuously captured CPU profiles to find bottlenecks and focused only on
 those issues.  Let's take a tour around the changes we made to make Hyper 3 one
 of the fastest terminals out there.
+
+<br/>
+<br/>
 
 ### WebGL Renderer
 
@@ -71,6 +89,9 @@ these.
 
 The new renderer is still considered work-in-progress so expect more
 improvements in the near future.
+
+<br/>
+<br/>
 
 ### IPC Batching
 
@@ -126,6 +147,9 @@ On a similar vein, we're also testing a new approach to [deciding how much data
 is parsed](https://github.com/zeit/xterm.js/pull/4/files) before yielding to the
 renderer. The idea is to prevent skipped frames for a more responsive terminal.
 
+<br/>
+<br/>
+
 ### Electron v3
 
 Hyper 3 bumps the version of the underlying Electron from v1 to v3. We also
@@ -135,7 +159,10 @@ to stay on v3. This version brings along newer versions of V8 and Node.js and
 their corresponding bug fixes. We were hoping to see additional performance
 improvements simply by upgrading Electron (given that v8 is being continuously
 improved) but no luck there. At least not that we could measure with our
-benchmarks. 
+benchmarks.
+
+<br/>
+<br/>
 
 ### Faster Startup Time
 
@@ -151,6 +178,9 @@ a substantial amount of time but can be done in parallel. Hyper 3 starts
 initializing both at the same time, so when the window says "I'm ready", the pty
 is warmed-up and ready to be consumed. Giving us a decent boost in launch time
 of about 150ms (on Linux, potentially higher gains on other platforms)
+
+<br/>
+<br/>
 
 ### Emoji Support
 
@@ -178,7 +208,10 @@ emoji.
   </style>
 </div>
 
-## Road Ahead 
+<br/>
+<br/>
+
+## Road Ahead
 
 Terminals are one of those tools that have existed since the 60s (we're
 literally emulating [this machine](https://en.wikipedia.org/wiki/VT100)!) but
@@ -195,6 +228,9 @@ We're excited to keep improving Hyper both in terms of performance and
 capabilities. There's a lot to do. Feel free to [swing
 by](https://github.com/zeit/hyper) and contribute to the future.
 
+<br/>
+<br/>
+
 ## Acknowledgments
 
 I'd like to point out how amazing the open source community can be, not only the
@@ -202,6 +238,9 @@ fact that we're building on top of the awesome set of open source libraries
 (e.g. xterm.js, electron, etc), but also because as soon as the xterm.js folks
 heard we were working on performance, they jumped right in and helped us with
 feedback and a bunch of initiatives they have on their side. Expect many more
-improvements. Huge thanks to [@Tyriar](https://github.com/tyriar), 
+improvements. Huge thanks to [@Tyriar](https://github.com/tyriar),
 [@Jerch](https://github.com/jerch), and
 [@Stanzilla](https://github.com/stanzilla) for their contributions and feedback.
+
+<br/>
+<br/>
