--- a/components/posts/hyper-3.mdx
+++ b/components/posts/hyper-3.mdx
@@ -1,10 +1,17 @@
 import DownloadButton from '../DownloadButton.js'
+import Caption from '../text/Caption.js'
+import Image from '../blog/Image.js'
 
-# Hyper 3
+<div style={{ padding: '100px 0px 50px 0' }}>
+  <h1>Hyper 3</h1>
+</div>
 
-**Hyper 3 is finally out!** and the main theme for this release is
-**performance**. To try it out, download it below. Read on to learn what's in
-this release and how it was developed.
+**Hyper 3 is finally out!** The main theme for this release is **performance**.
+Download it below to try out Hyper 3 right away, and read on to learn more about
+what's new.
+
+<br/>
+<br/>
 
 <div>
   <DownloadButton />
@@ -15,193 +22,191 @@ this release and how it was developed.
         justify-content: center;
       }
     `}
-    </style>
+  </style>
 </div>
+<br/>
+<br/>
+<p>
+In this release, we are including several big and small improvements to Hyper 3,
+which makes it *really* fast. For those of us who spend a significant amount of
+time on the command line, this release is a total game changer.
+</p>
 
-We've included a bunch of big and small improvements to make Hyper 3 very fast.
-For all of us that spend a significant amount of time on the command line, this
-release is a game changer.
-
-<div style={{ display: 'flex', justifyContent: 'space-around', margin: '15px 0px 0px 0px' }}>
-    <div>Hyper v2</div>
-    <div>Hyper v3</div>
-</div>
-
+<br/>
+<br/>
 <video
     id="vid"
     src="static/v2-vs-v3.mp4"
+    className="oversize"
     width="100%"
     autoPlay
     loop
     muted
     />
+ <br/>
+ <div style={{ display: 'flex', justifyContent: 'space-around', margin: '15px 0px 0px 0px' }}>
+    <div>Hyper 2</div>
+    <div>Hyper 3</div>
+</div>
+<br/>
+<br/>
 
 ## Getting There
 
-An interesting thing about this release is that it took a relatively short time
-from "let's make it faster" to "Holy shell! that's pretty fast!". The most
-important tool we used to keep this process efficient was the DevTools profiler,
-perks of building on a web platform, tools are really good. 
+Looking back, for this release, an interesting realisation for our team was the
+short time from "let's make this thing faster", to "Holy shell! That's fast!"/
 
-We continuously captured CPU profiles to find bottlenecks and focused only on
-those issues.  Let's take a tour around the changes we made to make Hyper 3 one
-of the fastest terminals out there.
+The great thing about building on the web platform, is that tools are efficient and mature ?
+in this case, the DevTools profiler was integral to our process.
+The DevTools profiler kept our workflow efficient. We continuously captured CPU
+profiles to discover bottlenecks and focused only on the issues that mattered.
 
-### WebGL Renderer
+Below, we revisit some of the important changes that were shipped in this release:
 
-The first bottleneck we found was the renderer. This is the piece of code that
-takes the state of the terminal and draws the actual pixels to the screen. The
-original Hyper renderer used the DOM, this was flexible (hello CSS) but slow.
-Hyper 2 improved upon this by switching from hterm to xterm.js and its
-canvas-based renderer, which was way faster. For Hyper 3, we knew it was
-possible to make it faster by rewriting the renderer using
+<br/>
+<br/>
+<h3>WebGL Renderer</h3>
+
+The WebGL renderer is the piece of code that draws actual pixels on the screen based on the state of the terminal.
+The original Hyper renderer used the DOM ? a flexible approach (thanks to CSS), but slow.
+
+Hyper 2 improved upon this by switching from `hterm` to `xterm.js` and its
+canvas-based renderer, which made it much faster. We knew it was
+possible to deliver faster performance by completely rewriting the renderer using
 [WebGL](https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API).
+By a fortunate coincidence, as we were figuring that out for Hyper 3,
+[@Tyriar](https://github.com/tyriar) (from `xterm.js` and `VSCode` fame), [just returned from a "vacation"](https://twitter.com/Tyriar/status/1064932797016489984)
+where he happened to be write a shiny new WebGL renderer. Isn't the open source
+community just amazing?
 
-By a fortunate coincidence, as we were figuring out how to build such a thing,
-[@Tyriar](https://github.com/tyriar) (from xterm.js and VSCode), [was coming back from a "vacation" where he
-happened to be writing a shiny new WebGL
-renderer](https://twitter.com/Tyriar/status/1064932797016489984)! (open source
-is amazing ❤). We promptly merged @Tyriar's branch onto a test fork, and well,
-it ran circles around Hyper 2. Thanks @Tyriar!
+We immediately merged @Tyriar's branch onto a test fork, and well,
+it ran circles around Hyper 2. Thanks [@Tyriar](https://twitter.com/Tyriar)!
 
-At the moment, there are a few minor limitations with this renderer (i.e.
-selection is always black-and-white, and you can't have more than 16 terminals
-visible simultaneously) but we think the performance benefits vastly outweigh
-these.
+Currently, there are minor limitations with this renderer (selection is always black-and-white,
+and you can't have more than 16 terminals visible simultaneously) but we think the performance
+benefits vastly outweigh them.
 
-The new renderer is still considered work-in-progress so expect more
-improvements in the near future.
+The new renderer is still work-in-progress, so you can expect further improvements in the near future.
 
-### IPC Batching
+<br/>
+<br/>
+<h3>IPC Batching</h3>
 
-Another performance issue we noticed was that very verbose commands would cause
-Hyper to choke for a few seconds, and then suddenly speed up again. For example,
+We discovered was that commands that were very verbose would cause
+Hyper to temporarily choke for a few seconds. For example,
 running `find ~` would cause Hyper to:
 
 - Run painfully slow for ~5 seconds (at ~1 frame-per-second)
 - Suddenly get faster (at ~15 frames-per-second) and finish printing everything in ~10 seconds.
 
-Digging into the CPU profiles, we noticed that the "renderer" process was
+Digging within the CPU profile, we noticed that the "renderer" process was
 spending most of its time handling an overwhelming amount of messages coming
-from the main process.
+in from the main process.
 
-In these profiles, it's easy to see the difference between v2 and v3.
+<Image  width={1756 / 2.5} height={1038 / 2.5} src="../../static/batching.svg"/>
+<Caption>
+  It is easy to see the difference between Hyper 2 and 3.
+  <br/>
+  The pink segments represent the time spent in processing IPC, instead of parsing
+  or rendering.
+</Caption>
 
-<div>
-    <img src="../../static/batching.svg"/>
-</div>
-
-The pink segments represent the time spent processing IPC, instead of parsing
-or rendering.
-
-Electron, being Chromium based, uses a multi-process architecture where each
-window runs on its own separate process called a "renderer" process.
-Additionally, there's one Node.js-based "main" process that talks directly to
+Electron uses a multi-process architecture where each window runs on its own separate
+process called a "renderer" process.
+Additionally, there's one Node.js-based "main" process that communicates directly with
 the underlying OS. In order for terminal data to be rendered by Hyper, it must
 be passed from the main process to the renderer process using IPC (Inter-Process
 Communication).
 
 **Node's IPC, unfortunately, comes with a non-trivial amount of overhead.**
-Messages are sent back and forth as **JSON strings** which must be encoded on
+Messages are sent back and forth as **JSON strings**, which must be encoded on
 one side and decoded on the other. Not only that, receiving data through IPC is
-an async operation and thus queued in v8's event loop. Yielding back the to the
-event loop every time we're done processing one of these small messages was, of
-course, making things worse overall. This repeated IPC caused thrashing when
-processing bursts of text, like running `cat` on a large file (see upper profile
+an async operation and thus queued in v8's event loop. Yielding back to the
+event loop each time after processing small messages made matters worse
+This repeated IPC caused thrashing when processing bursts of text, like running `cat` on a large file (see upper profile
 above).
 
-We mitigated this problem with a simple solution: batch data into larger chunks
+To mitigate this problem, we came up with a simple solution: batch data into larger chunks
 before sending them to the renderer process. IPC batching reduces the number of
 messages for verbose commands significantly and allows the renderer to focus on,
 well, rendering.
-
-One important consideration was to **batch as much data to reduce the IPC
+One important consideration was to **batch as much data as possible to reduce the IPC
 overhead, but not too much as to introduce perceivable latency**.
-
 With this approach, the renderer process now spends most of its time doing
-terminal emulation and rendering, as opposed to processing a fire hose of IPC
-messages. The result is a smoother and faster terminal.
+terminal emulation and rendering instead of processing a IPC messages.
+The outcome is a much smoother, and faster terminal.
 
-On a similar vein, we're also testing a new approach to [deciding how much data
+On a similar vein, we're also testing a new approach to [decide how much data
 is parsed](https://github.com/zeit/xterm.js/pull/4/files) before yielding to the
 renderer. The idea is to prevent skipped frames for a more responsive terminal.
 
-### Electron v3
+<br/>
+<br/>
 
-Hyper 3 bumps the version of the underlying Electron from v1 to v3. We also
-tested Electron v4 (the latest and greatest) but a [regression in the Canvas
+<h3>Electron v3</h3>
+
+Hyper 3 bumps the underlying Electron from v1 to v3. We also
+tested v4, but a [regression in the Canvas
 API](https://bugs.chromium.org/p/chromium/issues/detail?id=683994#c35) forced us
-to stay on v3. This version brings along newer versions of V8 and Node.js and
-their corresponding bug fixes. We were hoping to see additional performance
-improvements simply by upgrading Electron (given that v8 is being continuously
-improved) but no luck there. At least not that we could measure with our
-benchmarks. 
+to stay on v3. The upgrade brings in newer versions of V8 and Node.js, and
+their corresponding bug fixes.
 
-### Faster Startup Time
+<br/>
+<br/>
+<h3>Faster Startup Time</h3>
+Hyper 3 improves startup time by creating the first *pseudoterminal (pty)* as
+soon as possible. A pty is a facility provided by operating systems to allow programs such as
+Hyper to emulate terminals.
 
-Hyper 3 improves startup time by creating the first pseudoterminal (pty) as
-soon as possible. A pty is a facility that OSs provide to allow programs, such as
-Hyper, to emulate terminals.
+In previous versions, Hyper would wait for the Chromium window to open, for
+the window to send an "I'm ready" message, and _only then_ create the pty.
+As it turns out, those two activities require a substantial amount of time, but
+can be done in parallel.
 
-In previous versions, Hyper would wait for the Chromium window to open, wait for
-the window to send an "I'm ready" message, and *then* create the pty.
+Hyper 3 starts initializing both at the same time, so by the time the window says "I'm ready", the pty
+is already warmed-up and ready to be consumed. This gives Hyper 3 a decent boost in launch time
+(about 150ms on Linux, potentially better on other platforms).
 
-Turns out that these two things (creating the window and creating the pty) take
-a substantial amount of time but can be done in parallel. Hyper 3 starts
-initializing both at the same time, so when the window says "I'm ready", the pty
-is warmed-up and ready to be consumed. Giving us a decent boost in launch time
-of about 150ms (on Linux, potentially higher gains on other platforms)
+<br/>
+<br/>
 
-### Emoji Support
+<h3>Emoji Support</h3>
 
-If you're on MacOS, you can now press `  Command + Control + Space  ` to get the
-emoji popup and [jazz up those commit
-messages](https://gitmoji.carloscuesta.me/), or anything else really, we ❤
-emoji.
+If you're on MacOS, you can now press `Command + Control + Space` to get the
+emoji popup and [jazz up those commit messages](https://gitmoji.carloscuesta.me/), (or for anything else really, we ?
+emoji).
 
-<div>
-  <div>
-    <img src="../../static/emoji.png"/>
-  </div>
-  <style jsx>
-    {`
-      div {
-        # display: flex;
-        # justify-content: center;
-      }
-      img {
-        # transform: scale(1.0);
-        width: 100%;
-        background: #f00;
-      }
-    `}
-  </style>
-</div>
+<Image src="../../static/emoji.png" width={1208 / 2.5} height={740 / 2.5}/>
+<br/>
+<br/>
 
-## Road Ahead 
+## The Road Ahead
 
-Terminals are one of those tools that have existed since the 60s (we're
-literally emulating [this machine](https://en.wikipedia.org/wiki/VT100)!) but
-it's power and flexibility guarantees that will remain relevant for years to
-come, so [we're in for the long
-haul](https://twitter.com/rauchg/status/1074381303506587650).
+Terminals have existed since the 60s, and have been a powerful tool in our workflows.
+Their flexibility guarantees that they will remain relevant for years to
+come. [We're in for the long haul](https://twitter.com/rauchg/status/1074381303506587650).
 
-Hyper is a new kind of terminal built on top of web technology with a focus on
+Hyper is a new kind of terminal, built on top of web technology, with a focus on
 extensibility. This opens new possibilities that can make the CLI experience
-[more productive](https://github.com/chabou/hyper-pane), or simply [more
-fun](https://github.com/Aaronius/hyper-cat).
+[more productive](https://github.com/chabou/hyper-pane) (and [fun](https://github.com/Aaronius/hyper-cat))!
 
-We're excited to keep improving Hyper both in terms of performance and
-capabilities. There's a lot to do. Feel free to [swing
-by](https://github.com/zeit/hyper) and contribute to the future.
+We're excited to keep improving Hyper, both in terms of performance and
+capabilities ? there's a lot to do. Hyper is completely open source, and we welcome your
+[involvement and contribution](https://github.com/zeit/hyper).
+
+<br/>
+<br/>
 
 ## Acknowledgments
 
-I'd like to point out how amazing the open source community can be, not only the
-fact that we're building on top of the awesome set of open source libraries
-(e.g. xterm.js, electron, etc), but also because as soon as the xterm.js folks
-heard we were working on performance, they jumped right in and helped us with
-feedback and a bunch of initiatives they have on their side. Expect many more
-improvements. Huge thanks to [@Tyriar](https://github.com/tyriar), 
-[@Jerch](https://github.com/jerch), and
-[@Stanzilla](https://github.com/stanzilla) for their contributions and feedback.
+We're genuinely thankful for our open source communities. We're not saying this only because
+we are building on top of an incredible set of open source libraries, but also because we find
+the helpful ethos of the community very touching.
+
+As soon as the xterm.js folks heard we were working on performance, they jumped right in and helped us with
+feedback and several initiatives they had on their side. We would like to extend huge thanks to [@Tyriar](https://github.com/tyriar),
+[@Jerch](https://github.com/jerch) and
+[@Stanzilla](https://github.com/stanzilla) for their contribution and feedback.
+
+<br/>
+<br/>
