--- a/components/posts/hyper-3.mdx
+++ b/components/posts/hyper-3.mdx
@@ -5,7 +5,7 @@ import Image from '../blog/Image.js'
 
 <div className="heading">
   <h1>Hyper 3</h1>
-  <time datetime="2019-05-05">Friday, May 5rd 2019</time>
+  <time datetime="2019-05-05">Friday, May 5th 2019</time>
 </div>
 
 <ul className="authors">
