--- a/components/posts/hyper-3.mdx
+++ b/components/posts/hyper-3.mdx
@@ -140,7 +140,8 @@ Digging within the CPU profile, we noticed that the "renderer" process was
 spending most of its time handling an overwhelming amount of messages coming
 in from the main process.
 
-<Image  width={1756 / 2.5} height={1038 / 2.5} src="../../static/batching.svg"/>
+<Image  width={5469 / 3} height={1297 / 3} src="../../static/blog/hyper2.png" caption="Hyper 2"/>
+<Image  width={5469 / 3} height={1297 / 3} src="../../static/blog/hyper3.png" caption="Hyper 3"/>
 <Caption>
   It is easy to see the difference between Hyper 2 and 3.
   <br/>
