--- a/components/posts/hyper-3.mdx
+++ b/components/posts/hyper-3.mdx
@@ -183,8 +183,9 @@ their corresponding bug fixes.
 
 <br/>
 <br/>
+
 <h3>Faster Startup Time</h3>
-Hyper 3 improves startup time by creating the first *pseudoterminal (pty)* as
+Hyper 3 improves startup time by creating the first _pseudoterminal (pty)_ as
 soon as possible. A pty is a facility provided by operating systems to allow programs such as
 Hyper to emulate terminals.
 
@@ -240,3 +241,10 @@ feedback and several initiatives they had on their side. We would like to extend
 
 <br/>
 <br/>
+
+<Image
+  width={1800 / 2}
+  height={1360 / 2}
+  src="static/blog/themes.png"
+  caption="Themes Support"
+/>
