--- a/pages/blog/index.mdx
+++ b/pages/blog/index.mdx
@@ -56,7 +56,7 @@ what's new.
 <br/>
 <video
     id="vid"
-    src="static/blog/comparison.mp4"
+    src="/blog/comparison.mp4"
     className="oversize"
     autoPlay
     loop
@@ -109,8 +109,8 @@ Digging within the CPU profile, we noticed that the "renderer" process was
 spending most of its time handling an overwhelming amount of messages coming
 in from the main process.
 
-<Image width={5469 / 3} height={1297 / 3} src="static/blog/hyper2.png" caption="Hyper 2"/>
-<Image width={5469 / 3} height={1297 / 3} src="static/blog/hyper3.png" caption="Hyper 3"/>
+<Image width={5469 / 3} height={1297 / 3} src="/blog/hyper2.png" caption="Hyper 2"/>
+<Image width={5469 / 3} height={1297 / 3} src="/blog/hyper3.png" caption="Hyper 3"/>
 <Caption>
   It is easy to see the difference between Hyper v2 and v3.
   <br/>
@@ -181,7 +181,7 @@ If you're on MacOS, you can now press `Command + Control + Space` to get an
 emoji popup and [jazz up those commit messages](https://gitmoji.carloscuesta.me/).
 
 <Image
-  src="static/blog/supports-emoji.png"
+  src="/blog/supports-emoji.png"
   width={1062 / 2}
   height={950 / 2}
   caption="With the new emoji support, introducing emoji within Git commits (or elsewhere) is easier than ever."
@@ -200,7 +200,7 @@ We encourage all contribution and look forward to adding more themes and plugins
 <Image
   width={1800 / 2}
   height={1360 / 2}
-  src="static/blog/themes.png"
+  src="/blog/themes.png"
   caption="Hyper supports themes, allowing you to customise your development experience."
 />
 
