index page, plugin/theme page, removed unfetch, download button

--- a/pages/blog/index.mdx
+++ b/pages/blog/index.mdx
@@ -1,6 +1,6 @@
 import withPost from '../../components/blog/with-post'
 import Image from '../../components/blog/Image.js'
-import DownloadButton from '../../components/DownloadButton.js'
+import DownloadButton from '../../components/download-button'
 import Caption from '../../components/text/Caption.js'
 
 export const meta = {
