download button fix

--- a/pages/blog/index.mdx
+++ b/pages/blog/index.mdx
@@ -36,16 +36,8 @@ what's new.
 <br/>
 <br/>
 
-<div>
+<div className="button">
   <DownloadButton />
-  <style jsx>
-    {`
-      div {
-        display: flex;
-        justify-content: center;
-      }
-    `}
-  </style>
 </div>
 <br/>
 <br/>
