native lazy loading images w/o reflow

--- a/pages/blog/index.mdx
+++ b/pages/blog/index.mdx
@@ -51,6 +51,8 @@ what's new.
     autoPlay
     loop
     muted
+    width="1200"
+    height="470"
     />
  <br/>
 <br/>
@@ -99,9 +101,9 @@ Digging within the CPU profile, we noticed that the "renderer" process was
 spending most of its time handling an overwhelming amount of messages coming
 in from the main process.
 
-<img className="oversize" src="/blog/hyper2.png" />
+<img className="oversize" src="/blog/hyper2.png" load="lazy" width="5469" height="1297" />
 <p className="caption">Hyper 2</p>
-<img className="oversize" src="/blog/hyper3.png" />
+<img className="oversize" src="/blog/hyper3.png" load="lazy" width="5493" height="1315" />
 <p className="caption">Hyper 3</p>
 <p className="caption">
   It is easy to see the difference between Hyper v2 and v3.
@@ -172,7 +174,7 @@ is already warmed-up and ready to be consumed. This gives Hyper 3 a decent boost
 If you're on MacOS, you can now press `Command + Control + Space` to get an
 emoji popup and [jazz up those commit messages](https://gitmoji.carloscuesta.me/).
 
-<img src="/blog/supports-emoji.png" />
+<img src="/blog/supports-emoji.png" load="lazy" width="1062" height="950" />
   <p className="caption">With the new emoji support, introducing emoji within Git commits (or elsewhere) is easier than ever.</p>
 <br/>
 
@@ -185,7 +187,7 @@ We have a detailed contribution page that explains how you can go about
 [enlisting your extension](https://github.com/zeit/hyper-site/wiki/Submitting-a-new-plugin-or-theme-to-Hyper-Store).
 We encourage all contribution and look forward to adding more themes and plugins from the community!
 
-<img src="/blog/themes.png" />
+<img src="/blog/themes.png" load="lazy"  width="1800" height="1360" />
 <p className="caption">Hyper supports themes, allowing you to customise your development experience.</p>
 
 ## The Road Ahead
