--- a/blog/hyper3.mdx
+++ b/blog/hyper3.mdx
@@ -85,8 +85,18 @@ Digging within the CPU profile, we noticed that the "renderer" process
 was spending most of its time handling an overwhelming amount of
 messages coming in from the main process.
 
-<Image src="/blog/hyper2.png" caption="Hyper v2" oversize />
-<Image src="/blog/hyper3.png" caption="Hyper v3" oversize />
+<Image
+  src="/blog/hyper2.png"
+  caption="Hyper v2"
+  oversize
+  alt="Hyper v2's CPU profile"
+/>
+<Image
+  src="/blog/hyper3.png"
+  caption="Hyper v3"
+  oversize
+  alt="Hyper v3's CPU profile"
+/>
 
 It is easy to see the difference between Hyper v2 and v3.
 The pink segments represent the time spent in processing IPC, instead of parsing or rendering.
@@ -157,6 +167,7 @@ If you're on MacOS, you can now press
   src="/blog/supports-emoji.png"
   caption="With the new emoji support, introducing emoji within Git commits (or
 elsewhere) is easier than ever."
+  alt="Emoji popup"
 />
 
 ## More Themes on Hyper Store
@@ -173,6 +184,7 @@ and plugins from the community!
   src="/blog/themes.png"
   caption="Hyper supports themes, allowing you to customise your development
 experience."
+  alt="A collection of hyper themes"
 />
 
 ## The Road Ahead
