fix remaining seo

--- a/pages/store/submit.mdx
+++ b/pages/store/submit.mdx
@@ -19,7 +19,7 @@ For users to easily install your package, we use npm as the underlying service, 
 We suggest that your plugin is named with the prefix `hyper-` (for example `hyper-native`) and has either `hyper-plugin` or `hyper-theme` as a keyword depending on the type of your package.
 This will help users easily identify your package as a Hyper plugin or theme.
 
-Along with the previous suggestion, it'd be really helpful if your plugin if open-sourced, to provide a repository in your `package.json` so that the security conscious user will be able to review your code easily. You can read more about adding a repository to your `package.json` [here](https://docs.npmjs.com/files/package.json#repository).
+Along with the previous suggestion, it'd be really helpful if your plugin if open-sourced, to provide a repository in your `package.json` so that the security conscious user will be able to review your code easily. You can read more about adding a repository to your `package.json` [in npm's documentation](https://docs.npmjs.com/files/package.json#repository).
 
 ## Submit your plugin or theme to Hyper Store
 
