--- a/pages/store/submit.mdx
+++ b/pages/store/submit.mdx
@@ -11,7 +11,7 @@ If you want to add your plugin or theme to the Hyper Store list, follow the inst
 
 ## Create your plugin or theme
 
-You can find instructions and details about the process of creating a new plugin or theme in the [hyper repository](https://github.com/vercel/hyper/blob/canary/PLUGINS.md).
+You can find instructions and details about the process of creating a new plugin or theme in the [Hyper repository](https://github.com/vercel/hyper/blob/canary/PLUGINS.md).
 
 ## Publish your plugin or theme to npm
 
