--- a/pages/store/submit.mdx
+++ b/pages/store/submit.mdx
@@ -28,7 +28,7 @@ Create a pull request in [the hyper-site repository](https://github.com/vercel/h
 
 ```
 {
-  // The example is written in the format expected in the file but it contains comments that do not go into the file but are just there to give more information on what you can provide.
+  // The example is written in the desired format. You do not need to include these comments.
   // Your name must match the name which you published your package under on npm
   "name": "hyper-snazzy",
   // Describe your theme or plugin! If you have a description in your package.json, this is optional
