Landing page animation & SEO

--- a/pages/blog/index.mdx
+++ b/pages/blog/index.mdx
@@ -4,6 +4,7 @@ export const meta = {
   title: 'Hyper 3',
   metaTitle: 'Hyper™ Blog',
   metaDescription: 'Hyper 3: A cross-platform HTML/JS/CSS terminal',
+  metaImage: 'https://hyper.is/blog/hyper-3-twitter-card.png',
   authors: [
     {
       name: 'Juan Campa',
