Change Zeit to Vercel

--- a/pages/blog/index.mdx
+++ b/pages/blog/index.mdx
@@ -9,17 +9,17 @@ export const meta = {
     {
       name: 'Juan Campa',
       twitter: 'juancampa',
-      thumbnail: 'https://zeit.co/api/www/avatar/?u=juan&s=160',
+      thumbnail: 'https://vercel.com/api/www/avatar/?u=juan&s=160',
     },
     {
       name: 'Julien Déléan',
       twitter: 'CHaBou69',
-      thumbnail: 'https://zeit.co/api/www/avatar/?u=chabou&s=160',
+      thumbnail: 'https://vercel.com/api/www/avatar/?u=chabou&s=160',
     },
     {
       name: 'Daniel Imms',
       twitter: 'tyriar',
-      thumbnail: 'https://zeit.co/api/www/avatar/?u=tyriar&s=160',
+      thumbnail: 'https://vercel.com/api/www/avatar/?u=tyriar&s=160',
     },
   ],
 }
@@ -131,7 +131,7 @@ doing terminal emulation and rendering instead of processing IPC
 messages. The outcome is a much smoother, and faster terminal.
 
 On a similar vein, we are also testing a new approach to
-[decide how much data is parsed](https://github.com/zeit/xterm.js/pull/4/files)
+[decide how much data is parsed](https://github.com/vercel/xterm.js/pull/4/files)
 before yielding to the renderer. The idea is to prevent skipped frames
 for a more responsive terminal.
 
@@ -178,7 +178,7 @@ it's now even easier to customise your Hyper experience to your
 personality.
 
 We have a detailed contribution page that explains how you can go
-about [enlisting your extension](https://github.com/zeit/hyper-site/wiki/Submitting-a-new-plugin-or-theme-to-Hyper-Store). We encourage all contribution and look forward to adding more themes
+about [enlisting your extension](https://github.com/vercel/hyper-site/wiki/Submitting-a-new-plugin-or-theme-to-Hyper-Store). We encourage all contribution and look forward to adding more themes
 and plugins from the community!
 
 <Image
@@ -200,7 +200,7 @@ the CLI experience [more productive](https://github.com/chabou/hyper-pane) (and 
 
 We're excited to keep improving Hyper, both in terms of performance
 and capabilities — there's a lot to do. Hyper is completely open
-source, and we welcome your [involvement and contribution](https://github.com/zeit/hyper).
+source, and we welcome your [involvement and contribution](https://github.com/vercel/hyper).
 
 ## Acknowledgments
 
